// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders a map on a small screen 1`] = `
<div
  className={
    Object {
      "data-css-a1pmen": "",
    }
  }
>
  <div
    className="css-1quve7l"
  />
  <div
    className="p-a300 css-wi4u21"
  >
    <form
      action="#"
      className="sf sf--sm sf--y"
      onSubmit={[Function]}
    >
      <div
        className="sf-i"
      >
        <input
          aria-label="Address search field"
          className="sf-i-f"
          onInput={[Function]}
          placeholder="Search address or intersection…"
          type="text"
          value=""
        />
        <button
          className="sf-i-b"
          disabled={true}
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
    <div
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        className="m-v400"
      />
    </div>
    <div
      className="g css-1k8tu3j"
    >
      <div
        className="g--7 t--subinfo m-v200"
      >
        <a
          href="javascript:void(0)"
          onClick={[Function]}
        >
          Continue without location
        </a>
      </div>
      <button
        className="btn g--5"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`rendering renders with an address 1`] = `
<div
  className={
    Object {
      "data-css-a1pmen": "",
    }
  }
>
  <div
    className="p-a300 css-wi4u21"
  >
    <form
      action="#"
      className="sf sf--sm sf--y"
      onSubmit={[Function]}
    >
      <div
        className="sf-i"
      >
        <input
          aria-label="Address search field"
          className="sf-i-f"
          onInput={[Function]}
          placeholder="Search for a street address or intersection…"
          type="text"
          value=""
        />
        <button
          className="sf-i-b"
          disabled={true}
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
    <div
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        className="m-v400"
      >
        <div
          className="addr addr--s"
          style={
            Object {
              "whiteSpace": "pre-line",
            }
          }
        >
          City Hall Square
          Boston, MA
        </div>
      </div>
    </div>
    <div
      className="g css-1k8tu3j"
    >
      <div
        className="g--7 t--subinfo m-v200"
      >
        <a
          href="javascript:void(0)"
          onClick={[Function]}
        >
          Continue without location
        </a>
      </div>
      <button
        className="btn g--5"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`rendering renders without an address 1`] = `
<div
  className={
    Object {
      "data-css-a1pmen": "",
    }
  }
>
  <div
    className="p-a300 css-wi4u21"
  >
    <form
      action="#"
      className="sf sf--sm sf--y"
      onSubmit={[Function]}
    >
      <div
        className="sf-i"
      >
        <input
          aria-label="Address search field"
          className="sf-i-f"
          onInput={[Function]}
          placeholder="Search for a street address or intersection…"
          type="text"
          value=""
        />
        <button
          className="sf-i-b"
          disabled={true}
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
    <div
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <div
        className="m-v400"
      />
    </div>
    <div
      className="g css-1k8tu3j"
    >
      <div
        className="g--7 t--subinfo m-v200"
      >
        <a
          href="javascript:void(0)"
          onClick={[Function]}
        >
          Continue without location
        </a>
      </div>
      <button
        className="btn g--5"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
